maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: wrong number of type arguments for Array, should be 1
def Coord_voisins(x:Int ,y:Int):Array[Int,Int] = {
                                ^JediEscaper:17: error: wrong number of type arguments for Array, should be 1
	var res = new Array[Int,Int](4)
                      ^JediEscaper:22: error: not found: value aMurSud
	if (!aMurSud(x,y))
             ^JediEscaper:24: error: not found: value aMurEst
	if (!aMurEst(x,y))
             ^JediEscaper:29: error: not found: value Coord_voisin
Coord_voisin(x,y)
^